2011-12-02  Stefan Sauer  <ensonic@users.sf.net>

	* TODO:
	  Add idea + links for dgb script.

2011-11-27  Stefan Sauer  <ensonic@users.sf.net>

	* dllwrapper/wine/ext.c:
	* dllwrapper/wine/pe_image.c:
	* dllwrapper/wine/registry.c:
	* dllwrapper/wine/win32.c:
	  Fix set-but-unused warnings.

2011-10-07  Stefan Sauer  <ensonic@users.sf.net>

	* AUTHORS:
	  Change my name.

2011-07-09  Stefan Sauer  <ensonic@users.sf.net>

	* src/bmltest_process.h:
	  Check the fwrite return value to handle gcc warning.

2011-05-12  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/ext.c:
	* dllwrapper/wine/module.c:
	* dllwrapper/wine/pe_resource.c:
	* dllwrapper/wine/registry.c:
	* dllwrapper/wine/win32.c:
	  Remove some left-over debug logging. Fix some compiler warnings.

2011-05-10  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Also link tools against LIBM.

2011-03-25  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  Investigate the crashers with the locking and Check_FS_Segment()
	  deactivated. The locking seems to be not needed, but the
	  Check_FS_Segment().

2011-02-22  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  Code cleanup and some interesting discovery about performance. Yet,
	  conditionally off.

	* tests/testmachine.sh:
	  Use proper signal name.

2011-01-30  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Emulate more functions.

2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Add more API. Emulate GetStartupInfoA more.

2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	* src/bmltest_process.h:
	  Fix double free.

2011-01-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update TODO list and results from latest bml for another setup.

2011-01-10  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	  Filter newlines in command output.

	* tests/testmachine.sh:
	  Improve report: lowercase dlls (takes less space), print extra
	  commands.
